# sqlalchemy-tenants

./: .gitignore  404.html  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: .ci-template.yaml  ci.yaml  pull-requests.yaml
best-practices/: index.html
docs/: index.md  overview.md  reference.md  tenants.md
docs/examples/fastapi-integration/: Makefile  index.md  pyproject.toml
docs/examples/fastapi-integration/alembic/: env.py
docs/examples/fastapi-integration/app/: engine.py  main.py
examples/: index.html
examples/fastapi-integration/: index.html
overrides/partials/integrations/: analytics.html
reference/: index.html
search/: search_index.json
src/sqlalchemy_tenants/: __init__.py  alembic.py  core.py  exceptions.py  managers.py  orm.py
src/sqlalchemy_tenants/aio/: __init__.py  managers.py
tenants/: index.html
tests/: conftest.py  test_core.py  test_managers.py
tests/aio/: conftest.py  test_managers.py  test_postgres_manager.py
tests/alembic/: alembic.ini
