[project]
name = "sqlalchemy-tenants"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Michele Zanotti", email = "m.zanotti019@gmail.com" }
]
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
